gccida/c1/loop_iterations
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4045:4: error: expected ';' after expression
rtx equiv_value; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4045:5: error: use of undeclared identifier 'equiv_value'
rtx equiv_value; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4046:4: error: expected ';' after expression
rtx v63; // rbp 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4046:5: error: use of undeclared identifier 'v63'
rtx v63; // rbp 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4048:4: error: expected ';' after expression
rtx v65; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4048:5: error: use of undeclared identifier 'v65'
rtx v65; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4049:4: error: expected ';' after expression
rtx v66; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4049:5: error: use of undeclared identifier 'v66'
rtx v66; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4052:4: error: expected ';' after expression
rtx v69; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4052:5: error: use of undeclared identifier 'v69'
rtx v69; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4058:4: error: expected ';' after expression
rtx v75; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4058:5: error: use of undeclared identifier 'v75'
rtx v75; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4071:4: error: expected ';' after expression
rtx v88; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4071:5: error: use of undeclared identifier 'v88'
rtx v88; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4072:4: error: expected ';' after expression
rtx mult1; // [rsp+8h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4072:5: error: use of undeclared identifier 'mult1'
rtx mult1; // [rsp+8h] [rbp-70h] 
    ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4074:4: error: expected ';' after expression
rtx mult1a; // [rsp+8h] [rbp-70h] 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4074:5: error: use of undeclared identifier 'mult1a'; did you mean 'mult1c'?
rtx mult1a; // [rsp+8h] [rbp-70h] 
    ^~~~~~
    mult1c
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4073:18: note: 'mult1c' declared here
 struct rtx_def *mult1c; // [rsp+8h] [rbp-70h] 
                 ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/unroll.c:4076:4: error: expected ';' after expression
rtx mult1d; // [rsp+8h] [rbp-70h] 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/loop_iterations/src/obj/unroll.o] Error 1
